src/index.css
body {
  margin: 0;
  overflow-y: scroll;
  background: var(--white);
}
main {
  overflow: hidden;
}
a {
  text-decoration: none;
}
a {
  color: var(--blue);
}
img {
  display: block;
  max-width: 100%;
  height: auto;
}

.l-header {
  border-bottom: 1px solid var(--gray);
  background: var(--white);
}
.l-header__inner {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  column-gap: 0.625em;
  height: 40px;
}
.l-header__link {
  display: flex;
  align-items: center;
  height: 100%;
  column-gap: 0.3125em;
  color: var(--black);
  padding: 0 0.625em;
}
.l-header__title {
  font-size: inherit;
}
.l-header__logo {
  height: 100%;
}
.l-header__widgets {
  display: flex;
  justify-content: flex-end;
  gap: 0.2em 1em;
  flex-wrap: wrap;
  margin-left: auto;
}
.l-header__version, .l-header__language {
  display: flex;
  align-items: center;
  z-index: 999;
}
.c-version__text {
  display: flex;
  align-items: center;
  padding: 0 1em;
  background: var(--gray);
  border-radius: 0.8em;
}
.c-version__text--latest {
  background: var(--light-green);
}
.c-version__select, .c-language__select, .c-version__text {
  height: 2em;
}

.l-footer {
  border-top: 1px solid var(--gray);
  margin-top: 3.125em;
}
.l-footer__inner {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  row-gap: 0.625em;
  padding: 0.625em;
}
.l-footer__link {
  display: flex;
  align-items: center;
  height: 100%;
  column-gap: 0.3125em;
  color: var(--black);
  flex-wrap: wrap;
  justify-content: center;
}
.l-footer__logo {
  height: 1.25em;
}
.l-footer__copyright {
  color: var(--gray);
  font-size: 0.8em;
}

.l-inner {
  max-width: 1280px;
  margin: 0 auto;
  padding-left: var(--padding-inner);
  padding-right: var(--padding-inner);
}

.l-log__inner {
  display: flex;
  flex-direction: column;
  padding: 0;
}

.p-about {
  display: flex;
  flex-wrap: wrap;
  column-gap: 0.625em;
}
.p-about__under-construction {
  padding: 0.625em;
  background: var(--light-pink);
  margin-left: auto;
  margin-right: auto;
}
.p-about__break {
  flex-basis: 100%;
}
.p-about__roadmap, .p-about__done {
  flex-basis: calc(50% - 0.3125em);
}

.p-about__about {
  padding: 0.625em;
  background: var(--skyblue);
}

.p-run-list__table {
  overflow-x: auto;
}
.p-run-list__row {
  display: flex;
  align-items: stretch;
  width: fit-content;
  margin: 0.3125em 0;
  padding: 0 0.3125em;
  border-radius: 0.625em;
  color: inherit;
  column-gap: 0.3125em;
}
.p-run-list__row:nth-child(odd) {
  background: var(--light-blue);
}
.p-run-list__row:nth-child(even) {
  background: var(--light-green);
}
.p-run-list__row--header {
  font-weight: bold;
  text-align: center;
}
.p-run-list__cell--result-requests {
  display: flex;
  align-items: center;
  column-gap: 0.3125em;
}
.p-run-list__cell--id {
  width: 2em;
  display: flex;
  justify-content: center;
  align-items: center;
}
.p-run-list__cell--result {
  width: var(--result-width);
}
.p-run-list__cell--requests {
  width: calc(var(--dot-size) * 13);
}

.c-log__processing {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: var(--overlay);
  color: var(--white);
  z-index: 999;
  display: flex;
  justify-content: center;
  align-items: center;
}

.p-map {
  background: var(--f-brown);
  position: sticky;
  top: 0;
  z-index: 999;
}

.p-map__inner {
  overflow-x: auto;
  position: relative;
  transform: rotate(0);
}

.c-act__title {
  position: absolute;
  top: 0;
  left: 0;
  margin: 0.2em 0.5em;
  font-size: 1.2em;
  color: var(--f-black);
}

.p-holdings {
  position: sticky;
  top: 0;
  z-index: 999;
  min-height: var(--map-height);
  max-height: calc(100vh - var(--control-height));
  box-shadow: 0 0.5em 0.5em -0.5em var(--shadow);
  background: var(--white);
  display: flex;
  flex-direction: column;
  --entity-column-gap: 0.6em;
}
.p-holdings__inner {
  padding: 0.5em;
  overflow-y: scroll;
  height: 100%;
  scrollbar-width: thin;
}
.p-holdings__resizer {
  flex-grow: 0;
  flex-shrink: 0;
  flex-basis: 6px;
  justify-self: flex-end;
  cursor: row-resize;
  resize: vertical;
  position: relative;
  display: flex;
  justify-content: center;
  touch-action: none;
  height: 3px;
  --color: var(--gray);
  --visible: hidden;
  background: var(--color);
}
.p-holdings__resizer:before, .p-holdings__resizer:after {
  content: '';
  border: 1px solid var(--color);
  border-width: 0 3px 3px 0;
  display: inline-block;
  padding: 3px;
  position: absolute;
  pointer-events: none;
  visibility: var(--visible);
}
.p-holdings__resizer:before {
  bottom: 100%;
  transform: rotate(-135deg);
}
.p-holdings__resizer:after {
  top: 100%;
  transform: rotate(45deg);
}
.p-holdings__resizer:hover {
  --color: var(--green);
  --visible: visible;
}
.p-holdings__resizer:active {
  --color: var(--orange);
  --visible: visible;
}

.p-holdings__line {
  display: flex;
  align-items: center;
  column-gap: 0.5em;
  font-size: 0.8em;
}
.p-holdings__act {
  margin: 0;
}
.p-holdings__level {
  margin: 0;
}
.p-holdings__counts {
  display: flex;
  justify-content: space-between;
}

.p-holdings__entities {
  display: flex;
  justify-content: space-between;
}
.p-holdings__cards {
  --n: 6;
  flex-basis: calc(var(--n) * (var(--entity-width) + var(--entity-column-gap) + var(--entity-border) * 2) - var(--entity-column-gap));
}
.p-holdings__exhibits {
  --n: 2;
  flex-basis: calc(var(--n) * (var(--entity-width) + var(--entity-column-gap) + var(--entity-border) * 2) - var(--entity-column-gap));
}

.p-map__svg {
  display: block;
}

.c-map-icon {
  position: fixed;
  width: var(--icon-size);
  height: var(--icon-size);
}

.c-map-icon--boss {
  width: calc(var(--icon-size) * 2);
  height: calc(var(--icon-size) * 2);
}

.c-map-icon__visited {
  position: absolute;
  bottom: 0;
  right: 0;
  z-index: 1;
}

.c-map-icon__bg {
  top: 0;
  left: 0;
  position: absolute;
  z-index: -1;
}

.c-map-icon__bg--active {
  background: var(--f-white);
  border-radius: 50%;
}
/* ... */

